--- a/affair.html
+++ b/affair.html
@@ -1048,6 +1048,168 @@
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra32" aria-controls="offcanvasTop">Details</button>
                 </td>
               </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td >Canada
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra41" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Justin Trudeau
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra42" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td >China
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra51" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Xi Jinping
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra52" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td >France
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra61" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Emmanuel Macron
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra62" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td >Germany
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra71" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Olaf Scholz
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra72" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td >India
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra81" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Narendra Modi
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra82" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td >Indonesia
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra91" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Prabowo Subianto
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra92" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">10</th>
+                <td >Italy
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra101" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Giorgia Meloni
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra102" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td >Japan
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra111" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Shigeru  Ishiba
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra112" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">12</th>
+                <td >Mexico
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra121" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Claudia Sheinbaum
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra122" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">13</th>
+                <td >Russia
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra131" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Vladimir Putin
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra132" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">14</th>
+                <td >Saudi Arabia
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra141" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Salman Bin Abdulaziz Al Saud
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra142" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">15</th>
+                <td >South Africa
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra151" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Cyril Ramaphosa
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra152" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">16</th>
+                <td >South Korea
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra161" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Yoon Suk Yeol
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra162" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">17</th>
+                <td >Turkey
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra171" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Recep Tayyip Erdogan
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra172" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">18</th>
+                <td >United Kingdom
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra181" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Keir Starmer
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra182" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">19</th>
+                <td >United States
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra191" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Joe Biden
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra192" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">20</th>
+                <td >European Union
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra201" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Charles Michel
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra202" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">21</th>
+                <td >African Union(New Member Added in 2023)
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra211" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Mohamed Ould Ghazouani
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sra212" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
