--- a/affair.html
+++ b/affair.html
@@ -1218,12 +1218,113 @@
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree1" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
+          Permanent Guest Invitees
         </button>
       </h2>
       <div id="collapseThree1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <!-- This table start with "sraa11" as #sraa11 (this id for the button using as detail)  -->
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Sr.</th>
+                <th scope="col">Country</th>
+                <th scope="col">Leader</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Goverment of Spain
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa11" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Pedro Sanchez
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa12" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>ASEAN
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa21" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Kao Kim Hourn
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa22" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>NEPAD
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa21" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Nardos Beklle
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa22" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>ASEAN
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa31" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Kao Kim Hourn
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa32" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Financial Stability Board(FSB)
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa41" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Klass Knot
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa42" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>International Labour Organization
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa51" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Gilbert Houngbo
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa52" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>IMF
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa61" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Kristalina Georgieva
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa62" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>OECD
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa71" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Mathias Cormann
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa72" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>United Nations
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa81" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Antonio Guterres
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa82" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>ASEAN
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa21" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Kao Kim Hourn
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa22" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
