--- a/affair.html
+++ b/affair.html
@@ -1254,18 +1254,9 @@
               <tr>
                 <th scope="row">3</th>
                 <td>NEPAD
-                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa21" aria-controls="offcanvasTop">Details</button>
-                </td>
-                <td>Nardos Beklle
-                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa22" aria-controls="offcanvasTop">Details</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>ASEAN
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa31" aria-controls="offcanvasTop">Details</button>
                 </td>
-                <td>Kao Kim Hourn
+                <td>Nardos Beklle
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa32" aria-controls="offcanvasTop">Details</button>
                 </td>
               </tr>
@@ -1315,12 +1306,21 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>ASEAN
-                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa21" aria-controls="offcanvasTop">Details</button>
+                <th scope="row">9</th>
+                <td>The World Bank Group
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa91" aria-controls="offcanvasTop">Details</button>
                 </td>
-                <td>Kao Kim Hourn
-                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa22" aria-controls="offcanvasTop">Details</button>
+                <td>Ajay Banga
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa92" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">10</th>
+                <td>World Trade Organization
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa101" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Ngozi Okonjo-Iweala
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa92" aria-controls="offcanvasTop">Details</button>
                 </td>
               </tr>
             </tbody>
