--- a/affair.html
+++ b/affair.html
@@ -1253,10 +1253,10 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>NEPAD
+                <td>AUDA-NEPAD
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa31" aria-controls="offcanvasTop">Details</button>
                 </td>
-                <td>Nardos Beklle
+                <td>Abdel Fattah El-Sisi
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa32" aria-controls="offcanvasTop">Details</button>
                 </td>
               </tr>
@@ -1321,6 +1321,15 @@
                 </td>
                 <td>Ngozi Okonjo-Iweala
                   <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa92" aria-controls="offcanvasTop">Details</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td>The World Health Organization
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa111" aria-controls="offcanvasTop">Details</button>
+                </td>
+                <td>Tedros Adhanom
+                  <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sraa112" aria-controls="offcanvasTop">Details</button>
                 </td>
               </tr>
             </tbody>
