--- a/affair.html
+++ b/affair.html
@@ -989,7 +989,7 @@
     </div>
   </div>
 </div>
-  <h2 style="text-align: center;">G20 Meeting in Brazil</h2>
+  <h2 style="text-align: center;">G20 Meeting</h2>
   <div class="accordion  m-5" id="accordionExample1">
     <div class="accordion-item">
       <h2 class="accordion-header">
@@ -1000,6 +1000,7 @@
       <div id="collapseOne1" class="accordion-collapse collapse" data-bs-parent="#accordionExample1">
         <div class="accordion-body">
          <strong>G20 is an Intergovermental forum comprising of 19 sovereign countries, the European Union, and the African Union.</strong><i>founded in 1999.</i>Since 2008, it has convenced at least once a year.
+         <strong>The 2024 G20 meeting was 19th and held on 18-19 November 2024 at Museum of Modern Art in <i> Rio de Janeiro</i> Brazil</strong>
         </div>
       </div>
     </div>
