--- a/affair.html
+++ b/affair.html
@@ -1372,6 +1372,15 @@
        <i>Formed in 2021</i> The object of this ministry were looked after by the Ministry of Agriculture. 
         </div>
       </div>
+    <div class="offcanvas offcanvas-top h-50" tabindex="-1" id="sraa61" aria-labelledby="offcanvasTopLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasTopLabel">Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            The International Monetary Fund(IMF) is a Major financial agency of the United Nations, and an International Financial Institution funded by 190 member countries, with <strong>headquaters in Washington D.C. <i>formed on 1 July 1944 at the Bretton Woods Conference.</i></strong>First Deputy Managing Director is <b>Gita Gopinath</b>
+        </div>
+      </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>      
 </body>
 </html>
