--- a/affair.html
+++ b/affair.html
@@ -1339,7 +1339,20 @@
       </div>
     </div>
   </div>
-
+<h2 style="text-align: center;">Reserve Bank of India</h2>   
+<div class="accordion  m-5" id="accordionExample2">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne2" aria-expanded="false" aria-controls="collapseOne">
+       About RBI
+      </button>
+    </h2>
+    <div id="collapseOne2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
+      <div class="accordion-body">
+      The Reserve Bank of India
+      </div>
+    </div>
+  </div>
 
 
 <!-- THIS ALL ARE DISCRIPTIONS -->
