--- a/affair.html
+++ b/affair.html
@@ -1349,7 +1349,7 @@
     </h2>
     <div id="collapseOne2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
       <div class="accordion-body">
-      The Reserve Bank of India
+      The Reserve Bank of India is <Strong>India's Central Bank <i>Formed on 1 April 1935</i>and was nationalised on 1 January 1949</Strong>
       </div>
     </div>
   </div>
