--- a/affair.html
+++ b/affair.html
@@ -1353,6 +1353,24 @@
       </div>
     </div>
   </div>
+  <!-- HERE BUTTONS ID STARTS WITH #srb1 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetwo2" aria-expanded="false" aria-controls="collapseOne">
+      Functions
+      </button>
+    </h2>
+    <div id="collapsetwo2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
+      <div class="accordion-body">
+        <ul>
+          <li>Financial Supervision  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb1" aria-controls="offcanvasTop">Details</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
 
 
 <!-- THIS ALL ARE DISCRIPTIONS -->
