--- a/affair.html
+++ b/affair.html
@@ -1366,6 +1366,33 @@
           <li>Financial Supervision  
             <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb1" aria-controls="offcanvasTop">Details</button>
           </li>
+          <li>Regulator and Supervisor of the financial system  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb2" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Regulator and supervisor of the payment and settlement system   
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb3" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Banker and debt manager to Government  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb4" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Managing foreign Exchange  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb5" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Issue of currency  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb6" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Banker's Bank  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb7" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Detection of Fake currency  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb8" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li>Custodian to foreign exchange  
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb9" aria-controls="offcanvasTop">Details</button>
+          </li>
+          <li><strong>CSD</strong> for Government securities 
+            <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srb10" aria-controls="offcanvasTop">Details</button>
+          </li>
         </ul>
       </div>
     </div>
