--- a/affair.html
+++ b/affair.html
@@ -1397,6 +1397,25 @@
       </div>
     </div>
   </div>
+  <!-- HERE DETAILS BUTTONS ARE HAVE ID START WITH   #srbb1   -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsethree2" aria-expanded="false" aria-controls="collapseOne">
+        Current Rates
+      </button>
+    </h2>
+    <div id="collapsethree2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
+      <div class="accordion-body">
+          <ul>NAME
+            <li>
+              <li>Policy Repo Rate : <strong>6.50%</strong>  
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb1" aria-controls="offcanvasTop">Details</button>
+              </li>
+            </li>
+          </ul>
+      </div>
+    </div>
+  </div>
   </div>
 
 
