--- a/affair.html
+++ b/affair.html
@@ -1406,7 +1406,7 @@
     </h2>
     <div id="collapsethree2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
       <div class="accordion-body">
-          <ul>Lending Rates
+          <ul><strong style="text-align: center;">Lending Rates</strong>
             <li>Policy Repo Rate : <strong>6.50%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb1" aria-controls="offcanvasTop">Details</button>
             </li>
