--- a/affair.html
+++ b/affair.html
@@ -1413,6 +1413,9 @@
             <li>MSF Rate : <strong>6.75%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb2" aria-controls="offcanvasTop">Details</button>
             </li>
+            <li>Bank Rate : <strong>6.75%</strong>  
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb1" aria-controls="offcanvasTop">Details</button>
+            </li>
           </ul>
       </div>
     </div>
