--- a/affair.html
+++ b/affair.html
@@ -1414,7 +1414,18 @@
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb2" aria-controls="offcanvasTop">Details</button>
             </li>
             <li>Bank Rate : <strong>6.75%</strong>  
-              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb1" aria-controls="offcanvasTop">Details</button>
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb3" aria-controls="offcanvasTop">Details</button>
+            </li>
+          </ul>
+          <ul><strong>Borrowing Rates</strong>
+            <li>Reverse Repo Rate : <strong>3.55%</strong>  
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb4" aria-controls="offcanvasTop">Details</button>
+            </li>
+            <li>SDF Rate : <strong>6.25%</strong>  
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb5" aria-controls="offcanvasTop">Details</button>
+            </li>
+            <li>CRR Rate : <strong>4.50%</strong>  
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb6" aria-controls="offcanvasTop">Details</button>
             </li>
           </ul>
       </div>
