--- a/affair.html
+++ b/affair.html
@@ -1427,6 +1427,9 @@
             <li>CRR Rate : <strong>4.50%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb6" aria-controls="offcanvasTop">Details</button>
             </li>
+            <li>SLR Rate : <strong>18.00%</strong>  
+              <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb7" aria-controls="offcanvasTop">Details</button>
+            </li>
           </ul>
       </div>
     </div>
