--- a/affair.html
+++ b/affair.html
@@ -1428,9 +1428,11 @@
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb6" aria-controls="offcanvasTop">Details</button>
             </li>
           </ul>
+          <ul><Strong>Regulatory Ratios</Strong>
             <li>CRR Rate : <strong>4.50%</strong>  
             <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb6" aria-controls="offcanvasTop">Details</button>
             </li>
+          </ul> 
       </div>
     </div>
   </div>
