--- a/affair.html
+++ b/affair.html
@@ -1352,6 +1352,7 @@
       The Reserve Bank of India is <Strong>India's Central Bank <i>Formed on 1 April 1935</i> and was nationalised on 1 January 1949.</Strong>The Reserve Bank of India was established in 1934, under the Reserve Bank of India Act.Though privately owned initially, it was nationalised in 1949 and since then fully owned by the Ministry of Finance, Goverment of India(GOI).
       <ul>
         <li>Governor : <strong>Shaktikanta Das</strong></li>
+        <li>Deputy Governor : <strong>M. Rajeshwar Rao, Swaminathan J, T. Rabi Sankar, Dr. M.D. Patra</strong></li>
       </ul>
       </div>
     </div>
