--- a/affair.html
+++ b/affair.html
@@ -1353,6 +1353,7 @@
       <ul>
         <li>Governor : <strong>Shaktikanta Das</strong></li>
         <li>Deputy Governor : <strong>M. Rajeshwar Rao, Swaminathan J, T. Rabi Sankar, Dr. M.D. Patra</strong></li>
+        <li>Headquater : <strong>Mumbai, Maharashtra</strong></li>
       </ul>
       </div>
     </div>
