--- a/about.html
+++ b/about.html
@@ -22,6 +22,47 @@
         </li>
       </ul>
       <h1>We are nothing today So that's why no about us page beacouse there is nothing to tell you about us</h1>
+
+      <!DOCTYPE html>
+<html>
+<head>
+  <title>Google Charts Example</title>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <style>
+    #chart_div {
+      width: 900px;
+      height: 500px;
+    }
+  </style>
+</head>
+<body>
+  <div id="chart_div"></div>
+
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+      var data = google.visualization.arrayToDataTable([
+        ['Task', 'Hours per Day'],
+        ['Work',     11],
+        ['Eat',      2],
+        ['Sleep',    7],
+        ['Watch TV', 2],
+        ['Code',     4]
+      ]);
+
+      var options = {
+        title: 'My Daily Activities'
+      };
+
+      var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+
+      chart.draw(data, options);
+    }
+  </script>
+</body>
+</html>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>     
 </body>
 </html>
