--- a/affair.html
+++ b/affair.html
@@ -1443,6 +1443,25 @@
   </div>
   </div>
 
+<h2 style="text-align: center;">Banks of India</h2> 
+<div class="accordion  m-5" id="accordionExample3">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne3" aria-expanded="false" aria-controls="collapseOne">
+         Public Sector Undertaking (PSU)
+        </button>
+      </h2>
+      <div id="collapseOne3" class="accordion-collapse collapse" data-bs-parent="#accordionExample3">
+        <div class="accordion-body">
+            <ul>
+              <li>State Bank of India</li>
+              <li>Bank of Baroda</li>
+            </ul>
+        </div>
+      </div>
+    </div>
+
+
 
 <!-- THIS ALL ARE DISCRIPTIONS -->
  
