--- a/affair.html
+++ b/affair.html
@@ -1442,7 +1442,7 @@
     </div>
   </div>
   </div>
-
+<!-- HERE DETAILS BUTTON START WITH #src1 -->
 <h2 style="text-align: center;">Banks of India</h2> 
 <div class="accordion  m-5" id="accordionExample3">
     <div class="accordion-item">
@@ -1454,8 +1454,12 @@
       <div id="collapseOne3" class="accordion-collapse collapse" data-bs-parent="#accordionExample3">
         <div class="accordion-body">
             <ul>
-              <li>State Bank of India</li>
-              <li>Bank of Baroda</li>
+              <li>State Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src1" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of Baroda
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src2" aria-controls="offcanvasTop">Details</button>
+              </li>
             </ul>
         </div>
       </div>
