--- a/affair.html
+++ b/affair.html
@@ -1460,6 +1460,30 @@
               <li>Bank of Baroda
                 <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src2" aria-controls="offcanvasTop">Details</button>
               </li>
+              <li>Union Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src3" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Punjab National Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src4" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Canara Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src5" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Punjab and Sind Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src6" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Indian Bnak
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src7" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src8" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of Maharashtra
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src9" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Central Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src2" aria-controls="offcanvasTop">Details</button>
+              </li>
             </ul>
         </div>
       </div>
