--- a/affair.html
+++ b/affair.html
@@ -1482,7 +1482,13 @@
                 <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src9" aria-controls="offcanvasTop">Details</button>
               </li>
               <li>Central Bank of India
-                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src2" aria-controls="offcanvasTop">Details</button>
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src10" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Indian Overseas Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src11" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Uco Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src12" aria-controls="offcanvasTop">Details</button>
               </li>
             </ul>
         </div>
