--- a/affair.html
+++ b/affair.html
@@ -1494,6 +1494,55 @@
         </div>
       </div>
     </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSec3" aria-expanded="false" aria-controls="collapseOne">
+         Public Sector Undertaking (PSU)
+        </button>
+      </h2>
+      <div id="collapseSec3" class="accordion-collapse collapse" data-bs-parent="#accordionExample3">
+        <div class="accordion-body">
+            <ul>
+              <li>State Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src1" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of Baroda
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src2" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Union Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src3" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Punjab National Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src4" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Canara Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src5" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Punjab and Sind Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src6" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Indian Bnak
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src7" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src8" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Bank of Maharashtra
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src9" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Central Bank of India
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src10" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Indian Overseas Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src11" aria-controls="offcanvasTop">Details</button>
+              </li>
+              <li>Uco Bank
+                <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#src12" aria-controls="offcanvasTop">Details</button>
+              </li>
+            </ul>
+        </div>
+      </div>
+    </div>
    </div>
 
 
