--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
           <a class="nav-link" href="affair.html">Affairs</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="grammer.html">English</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
         </li>
         <li class="nav-item">
